--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,9 +1,33 @@
-p{
-    color:blue;
 
+.logo{
+    width:30px;
+    height: auto;
 }
 
-img{
-    weigh:100px;
-    height:100px;
+.form-container{
+    margin:0 auto;
+    padding: 10px;
+    overflow: hidden;
+}
+
+.main{
+    margin:0 auto;
+    overflow: hidden;
+}
+
+.page-title{
+    text-align: center;
+}
+
+#page-title-1{
+    background:lightseagreen;
+}
+#page-title-2{
+    background: lightblue;
+}
+#page-title-3{
+    background: lightgoldenrodyellow;
+}
+#page-title-4{
+    background: lightsalmon;
 }
